<resources>

    <string name="app_name">Book flight</string>
    <string name="app_name_maj">BOOK FLIGHT</string>
    <string name="menu_settings">Settings</string>
    
    <string name="title_activity_flightbook">Book flight</string>
    <string name="startChronometre1">Chronometer is started</string>
    <string name="stopChronometre1">Stop</string>
    <string name="reset">Reset</string>
    <string name="close">Close</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="StartService">Start service</string>
    
    <string name="save_ok">Saved</string>
    
    <string name="title_activity_vol">Flight</string>
    <string name="aeronef">Machine</string>
    <string name="type">Type</string>
    <string name="selectAeronef">Shed</string>
    <string name="selectSite">Site</string>
    <string name="minVol">Time</string>
    <string name="moteur">Engine</string>
    <string name="moteurLandscape">Eng.</string>
    <string name="min">min</string>
    <string name="sec">sec</string>
	<string name="save">Save</string>
	<string name="deleteVol">Reset</string>
	<string name="note">Note</string>
	<string name="date">Date</string>
	<string name="vol">Time</string>
	<string name="lieu">Place</string>
	<string name="gps">Gps</string>
    <string name="lat">Lat</string>
	<string name="lon">Long</string>
	<string name="latitude">Latitude</string>
	<string name="longitude">Longitude</string>
	<string name="alt">Alt</string>
	<string name="ici">You are here !</string>
    <string name="total">Total</string>
    <string name="chart">Chart</string>
    <string name="day">days</string>
	
	<string name="wingSpan">Wingspan</string>
	<string name="metre">m</string>
	<string name="weight">Weight</string>
	<string name="kilo">kg</string>
	<string name="fistFlight">First flight</string>
    
	<string name="delete">Delete</string>
	<string name="oui">Yes</string>
	<string name="non">No</string>
	
	
	<string name="title_activity_aeronef">Shed</string>
	<string name="addAeronef">Add</string>
	
	<string name="title_activity_hangar">Shed</string>
    <string name="title_activity_site">Site</string>
    <string name="title_activity_addSite">Site</string>
    <string name="site_save">Site saved</string>
    <string name="site_default">Value by default</string>
	
	<string name="title_activity_vols">Records</string>

    <string name="title_activity_chart_time">Time (mn)</string>
    <string name="title_activity_chart_nb">Number of flight</string>


	
	<string name="title_activity_addAeronef">Machine</string>
	<string name="aeronef_save">Machine saved</string>
	<string name="number_format_ko">Invalid number format</string>
	<string name="name_mandatory">Name is mandatory</string>
	<string name="type_mandatory">Select a type</string>
	<string name="aeronef_mandatory">Select a machine</string>
	<string name="opt_planeur">Glider</string>
	<string name="opt_avion">Aircraft</string>
	<string name="opt_paramoteur">Paramotor</string>
	<string name="opt_helico">Helicopter</string>
	<string name="opt_auto">Car</string>
	<string name="opt_divers">Other</string>
    <string name="opt_inconnu">Unknown</string>
    <string name="opt_all"></string>
	<string name="pic">Photo</string>
	<string name="image_delete">Delete image ?</string>
	
	<string name="title_activity_drive">Synchronization Google Drive</string>
	
	<string name="title_activity_meteo">Metar</string>
	<string name="metar">Metar</string>
	<string name="meteo">Weather</string>
	<string name="oaci">OACI code</string>
	<string name="defaultOaci">LFPG</string>
	<string name="download">Download</string>
	<string name="wainting">Searching</string>
    <string name="internet_ko">Internet connection is required</string>
    <string name="meteo_cunimb_say">Metar by cunimb for</string>
    <string name="meteo_add_say">Metar by aviation weather for</string>
    <string name="meteo_allmetar_say">Metar by metsat for</string>
	
	<string name="title_activity_radios">Radio programs</string>
	<string name="title_activity_radio">Radio program</string>
	<string name="title_activity_switchpotar">Adding switch - potentiometer</string>
	<string name="inter_potar_mandatory">Must choose between a switch or potentiometer</string>
	
	<string name="radio">radio program</string>
	<string name="action">Action</string>
	<string name="name">Name</string>
	<string name="up">UP</string>
	<string name="down">DOWN</string>
	<string name="center">CENTER</string>
	<string name="inter">Switch</string>
	<string name="potar">Potentiometer</string>
	 
	<string name="nfc">Nfc</string>
	<string name="nfc_tag_detected">Tag detected</string>
	<string name="nfc_approch_tag">Bring you the tag to write</string>
	<string name="nfc_write_ok">Writing successful tag</string>
	<string name="nfc_write_ko">Writing error</string>
	<string name="nfc_save_before">The machine must be registered before being tagged</string>
	<string name="nfc_write_ko_format">Writing error. You may need to format the tag.</string>
	
	<string name="title_activity_carte">Map</string>
	<string name="carte">Map</string>
	<string name="position_ko">Postition not available</string>
	<string name="map_type">Map layout</string>
	
	<string name="title_activity_checklist">Checklist</string>
	<string name="checklist">Checklist</string>
	<string name="checklistItem">Item</string>
	<string name="order">Order</string>
	<string name="checklistDefaultItem">Radio ON</string>
	<string name="checklist_update_ok">All changes have been saved</string>
	<string name="checklist_order_mandatory">Order is mandatory</string>
	<string name="checklist_action_mandatory">Action is mandatory</string>
	<string name="checklist_item_not_check">The items above are not all validated</string>
	<string name="checklist_teminated">Checklist successful</string>
	<string name="checklist_becarfull">Attention</string>
	
	<string name="st_for">for</string>
	
	<string name="log">Log</string>
	
	<string name="bye">Bye</string>

    <string name="title_activity_accu">Battery</string>
    <string name="accu_propultion">Battery</string>
    <string name="selectAccu">Engine battery</string>
    <string name="title_activity_addAccu">Battery</string>
    <string name="accu_save">Battery saved</string>
    <string name="accu_nb_element">Number of elements</string>
    <string name="accu_capacite">Capacity (mAh)</string>
    <string name="accu_voltage">Voltage (V)</string>
    <string name="accu_tauxDecharge">Discharge rate (C)</string>
    <string name="accu_numero">Number</string>
    <string name="accu_nom">Name</string>
    <string name="accu_marque">Brand</string>
    <string name="accu_date_achat">Date of purchase</string>
    <string name="accu_nb_cycle">Number of cycles</string>
    <string name="accu_header_nb_element">Els</string>
    <string name="accu_header_capacite">mAH</string>
    <string name="accu_header_tauxDecharge">C</string>

    <string name="menu">Menu</string>
    <string name="menu_send">Send</string>
    <string name="menu_export_db">Export data</string>
    <string name="menu_piechartbynb">Number of flights by type</string>
    <string name="menu_barchartbynb">Number of flights by machine</string>
    <string name="menu_piechartbytotal">Flight time by type</string>
    <string name="menu_barchartbytotal">Flight time by machine</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_groubydate">Activity by date</string>
    <string name="menu_chart">Charts</string>
    <string name="menu_importVols">Import flights</string>
    <string name="menu_import_ok">Import ok</string>
    <string name="menu_import">Import data</string>
    <string name="import_reload_list">refresh the page</string>

    <string name="filter_start_date">End date</string>
    <string name="filter_end_date">Start date</string>

    <string name="widget_nb_flight">flights</string>

	<string name="ffam">FFAM</string>

</resources>