<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content" android:layout_height="wrap_content"
	android:id="@+id/LL_Fond">
	
	
	<TextView android:text="@string/aeronef" android:id="@+id/name"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:textSize="25sp"
		android:layout_marginLeft="5dp">
	</TextView>
	
	<TextView android:id="@+id/type"
	    android:text="@string/type"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:textSize="15sp"
		android:layout_marginLeft="180dp">
	</TextView>


    <ImageButton
        android:id="@+id/updateAeronef"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="false"
        android:background="#00000000"
        android:contentDescription="@string/update"
        android:src="@drawable/update"
        android:layout_toLeftOf="@+id/deleteAeronef" />

	<ImageButton
        android:id="@+id/deleteAeronef"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="false"
        android:background="#00000000"
        android:contentDescription="@string/delete"
        android:src="@drawable/delete"
        android:layout_alignParentRight="true" />
	
	
</RelativeLayout>