<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:id="@+id/item_vols">
		
		<TextView
	        android:id="@+id/textViewName"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:layout_marginLeft="16dp"
	        android:layout_marginTop="20dp"
	        android:text="@string/name" />
		
		<EditText
	        android:id="@+id/editTextName"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewName"
            android:layout_toRightOf="@+id/textViewName"
	        android:ems="10"
	        android:inputType="text" />
		

		<TextView
	        android:id="@+id/textViewComment"
	         android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/textViewName"
	        android:layout_marginLeft="16dp"
	        android:layout_marginTop="17dp"
	        android:text="@string/note" />
		
		<EditText
	        android:id="@+id/editTextComment"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewComment"
            android:layout_toRightOf="@+id/textViewComment"
	        android:ems="10"
	        android:inputType="text" />


        <CheckBox
            android:id="@+id/site_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="17dp"
            android:layout_below="@+id/textViewComment"
            android:text="@string/site_default" />


	</RelativeLayout>

</ScrollView>